force-app/main/default/objects/Week_Log__c/Week_Log__c.object-meta.xml
<CustomObject>
    <label>Week Log</label>
    <nameField>
        <displayFormat>WL-{00000}</displayFormat>
        <label>Week Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Week Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>