force-app/main/default/objects/Week_Log__c/fields/Dev_Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Dev_Budget_Hours__c</fullName>
    <label>Development Budget Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>