force-app/main/default/objects/Week_Log__c/fields/Lead_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_Actual_Hours__c</fullName>
    <label>Lead Actual Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>