force-app/main/default/objects/Week_Log__c/fields/Manager_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Manager_Actual_Hours__c</fullName>
    <label>Manager Actual Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>