force-app/main/default/objects/Week_Log__c/fields/QA_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>QA_Actual_Hours__c</fullName>
    <label>QA Actual Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>