force-app/main/default/objects/Week_Log__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>